# openfpa

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: agent-native-workspace.md
docs/blog/: launch.md
docs/demo/: briefing.md
examples/foxfactory/: README.md  foxf_model.py  pull_edgar.py  run_foxf.py
examples/ridgeline/: cash13.yaml  config.yaml  quickbooks_pl_sample.csv  run_demo.py  skus.yaml
pyfpa/: __init__.py  cli.py  cli_helpers.py
pyfpa/analysis/: divestiture.py  reconcile.py  segments.py  sku.py
pyfpa/backtest/: __init__.py  holdout.py  learn.py  score.py  snapshot.py
pyfpa/cash13/: flows.py  forecast.py  runway.py  schemas.py
pyfpa/cli_commands/: learning.py  lineage.py  reporting.py
pyfpa/config/: loader.py  schemas.py
pyfpa/excel/: __init__.py  model_workbook.py  toolkit.py  verify.py
pyfpa/io/: adapters.py  loaders.py  pl_csv.py  reporting.py
tests/: conftest.py  test_backtest_holdout.py  test_backtest_learn.py  test_backtest_scenario.py  test_backtest_score.py  test_backtest_snapshot.py  test_cash13_flows.py  test_cash13_forecast.py  test_cash13_ridgeline.py  test_cash13_runway.py  test_cashflow.py  test_cashflow_fcf.py  test_cli.py  test_cli_model_export.py  test_cogs.py  test_debt.py  test_demo_runner.py  test_divestiture.py  test_excel_equivalence.py  test_excel_model_structure.py  test_excel_toolkit.py  test_excel_verify.py  test_foxf_reconciliation.py  test_io_adapters.py  test_io_loaders.py  test_io_pl_csv.py  test_io_reporting.py  test_loader.py  test_memory_connectors.py  test_memory_corrections.py  test_memory_diagnostics.py  test_memory_entrypoints.py  test_memory_experiments.py  test_memory_inspection.py  test_memory_intake.py  test_memory_lineage.py  test_memory_onboarding.py  test_memory_paths.py  test_memory_retrieval.py  test_memory_workspace.py  (+18 more)
(+85 files in other folders)
