[project]
name = "pyfpa"
version = "0.1.0"
description = "Lean, config-driven FP&A forecast engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyfpa*"]
