[project]
name = "openfpa"
version = "0.1.0"
description = "Agent-native FP&A toolbelt with a tested finance kernel, durable company memory, and evidence-gated research."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Guiderail" }]
keywords = ["fpa", "cfo", "finance", "forecasting", "cash-flow", "fp&a", "netsuite", "quickbooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]

[project.scripts]
openfpa = "pyfpa.cli:main"

[project.urls]
Homepage = "https://github.com/JeffBrines/openfpa"
Repository = "https://github.com/JeffBrines/openfpa"
Issues = "https://github.com/JeffBrines/openfpa/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyfpa*"]

[tool.setuptools.package-data]
"pyfpa" = ["py.typed"]
"pyfpa.io" = ["fixtures/*.csv"]
